<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.SMSWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small"
    android:theme="@style/Theme.SMSWidget.AppWidgetContainer">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl_widget"
        android:layout_margin="@dimen/widget_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/tv_updated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:gravity="end"
                android:singleLine="true"
                tools:text="Updated 10:12 AM" />

            <FrameLayout
                android:id="@+id/fl_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <ProgressBar
                    android:id="@+id/pb_refresh"
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:indeterminate="true"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_refresh"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:contentDescription="@string/refresh"
                    android:src="@drawable/ic_baseline_sync_24"
                    android:visibility="invisible" />
            </FrameLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_header">

            <ListView
                android:id="@+id/lv_messages"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:scrollbars="none"
                tools:visibility="gone"
                />

            <TextView
                android:id="@+id/tv_empty_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/loading"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_edit_sms"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="2dp"
                android:background="@drawable/ic_baseline_circle_24"
                android:contentDescription="@string/create"
                android:padding="3dp"
                android:src="@drawable/ic_outline_edit_24" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sms_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/unread_background"
        android:gravity="center"
        android:minWidth="17dp"
        android:minHeight="17dp"
        android:layout_marginStart="6dp"
        android:padding="2dp"
        android:textColor="#ffffffff"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone" />
</FrameLayout>